hphp/test/slow/spec/tests/exception_handling/derived_exception_protected_props.php.expectf
Warning: Type-hint of 'DerivedException::message' must be string (as in class Exception), not mixed in %s/test/slow/spec/tests/exception_handling/derived_exception_protected_props.php on line 9

Warning: Type-hint of 'DerivedException::code' must be int (as in class Exception), not mixed in %s/test/slow/spec/tests/exception_handling/derived_exception_protected_props.php on line 9
Derived message
12345
Foo
12345
Foo
10

Fatal error: Uncaught exception 'DerivedException' with message 'Derived message' in %s:29
Stack trace:
%a {main}
